--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <h2> Banaan floris banaan banaan broodje gebakken bannaan</h2>
   </main>
 </body>
 
